--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -9,7 +9,7 @@
       rgba(47, 48, 58, 0.4),
       rgba(47, 48, 58, 0.4)
     ),
-    url("../../images/hero/hero-bg-mob.jpg");
+    url("../images/hero/hero-bg-mob.jpg");
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -21,7 +21,7 @@
         rgba(47, 48, 58, 0.4),
         rgba(47, 48, 58, 0.4)
       ),
-      url("../../images/hero/hero-bg-mob-2x.jpg");
+      url("../images/hero/hero-bg-mob-2x.jpg");
   }
 
   @media screen and (min-width: 768px) {
@@ -29,7 +29,7 @@
         rgba(47, 48, 58, 0.4),
         rgba(47, 48, 58, 0.4)
       ),
-      url("../../images/hero/hero-bg-tab.jpg");
+      url("../images/hero/hero-bg-tab.jpg");
 
     @media screen and (min-width: 768px) and (min-device-pixel-ratio: 2),
       (min-resolution: 192dpi),
@@ -38,7 +38,7 @@
           rgba(47, 48, 58, 0.4),
           rgba(47, 48, 58, 0.4)
         ),
-        url("../../images/hero/hero-bg-tab-2x.jpg");
+        url("../images/hero/hero-bg-tab-2x.jpg");
     }
   }
 
@@ -49,7 +49,7 @@
         rgba(47, 48, 58, 0.4),
         rgba(47, 48, 58, 0.4)
       ),
-      url("../../images/hero/hero-bg-desk.jpg");
+      url("../images/hero/hero-bg-desk.jpg");
     @media screen and (min-width: 1200px) and (min-device-pixel-ratio: 2),
       (min-resolution: 192dpi),
       (min-resolution: 2dppx) {
@@ -57,7 +57,7 @@
           rgba(47, 48, 58, 0.4),
           rgba(47, 48, 58, 0.4)
         ),
-        url("../../images/hero/hero-bg-desk-2x.jpg");
+        url("../images/hero/hero-bg-desk-2x.jpg");
     }
   }
 }
