--- a/css/portfolio-main.css
+++ b/css/portfolio-main.css
@@ -488,12 +488,6 @@ img {
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.section-btn:hover, .section-btn:focus {
-  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
-  color: #ffffff;
-  background-color: #2196f3;
-}
-
 @media screen and (min-width: 480px) {
   .portfolio-list {
     display: flex;
@@ -543,11 +537,11 @@ img {
 }
 
 .card-overlay-text {
+  overflow: hidden;
   position: absolute;
   width: 100%;
   height: 100%;
   padding: 63px 24px;
-  overflow: auto;
   font-size: 18px;
   line-height: 1.56;
   color: #ffffff;
@@ -584,6 +578,12 @@ img {
   margin-top: 5px;
   font-size: 16px;
   line-height: 1.87;
+}
+
+.is-active {
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+  color: #ffffff;
+  background-color: #2196f3;
 }
 
 @media screen and (max-width: 479px) {
