--- a/sass/layout/_portfolio-page.scss
+++ b/sass/layout/_portfolio-page.scss
@@ -40,13 +40,13 @@
     color 250ms cubic-bezier(0.4, 0, 0.2, 1),
     background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
-  &:hover,
-  &:focus {
-    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
-      0px 2px 2px rgba(0, 0, 0, 0.12);
-    color: $main-bg-color;
-    background-color: $accent-color;
-  }
+  // &:focus,
+  // &:hover {
+  //   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
+  //     0px 2px 2px rgba(0, 0, 0, 0.12);
+  //   color: $main-bg-color;
+  //   background-color: $accent-color;
+  // }
 }
 
 // cards
@@ -102,12 +102,12 @@
 }
 
 .card-overlay-text {
+  overflow: hidden;
   position: absolute;
 
   width: 100%;
   height: 100%;
   padding: 63px 24px;
-  overflow: auto;
 
   font-size: 18px;
   line-height: 1.56;
@@ -148,4 +148,11 @@
 
   font-size: 16px;
   line-height: 1.87;
+}
+
+.is-active {
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
+    0px 2px 2px rgba(0, 0, 0, 0.12);
+  color: $main-bg-color;
+  background-color: $accent-color;
 }
